welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: value lenght is not a member of Array[Int]
  for (k<-1 to num.lenght-1){
                   ^