welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var niv=1
  var haut=num(0)
  for (k<-1 to num.lenght-1){
    if (num(k)>haut){
      niv=niv+1
      haut=num(k)
    }
    else{
      niv=niv
      haut=haut
    }
  }
  return niv
}